--- a/stories/package.json
+++ b/stories/package.json
@@ -22,11 +22,11 @@
     "@hn-hub/common": "^1.0.3",
     "@types/express": "^4.17.6",
     "@types/mongoose": "^5.7.27",
+    "axios": "^0.19.2",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.6.0",
     "mongoose": "^5.9.19",
-    "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^1.0.0-pre.49",
     "typescript": "^3.9.5"
