k8s config for History service: - history-depl - history-mongo-depl - ingress-srv - skaffold

--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -14,3 +14,7 @@ spec:
             backend:
               serviceName: stories-srv
               servicePort: 3000
+          - path: /past-stories/?(.*)
+            backend:
+              serviceName: history-srv
+              servicePort: 3000
