k8s config for comments service - comments depl - comments mongo depl - comments srv - ingress routing - skaffold dev

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -32,3 +32,11 @@ build:
         manual:
           - src: "src/**/*.ts"
             dest: .
+    - image: shubhamjain2908/comments
+      context: comments
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "src/**/*.ts"
+            dest: .
