--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -18,3 +18,7 @@ spec:
             backend:
               serviceName: history-srv
               servicePort: 3000
+          - path: /comments/?(.*)
+            backend:
+              serviceName: comments-srv
+              servicePort: 3000
