--- a/comments/package.json
+++ b/comments/package.json
@@ -22,6 +22,7 @@
     "@hn-hub/common": "^1.0.7",
     "@types/express": "^4.17.6",
     "@types/mongoose": "^5.7.27",
+    "axios": "^0.19.2",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.6.0",
