--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   rules:
-    - host: tickethub.dev
+    - host: hn-hub.dev
       http:
         paths:
           - path: /top-stories/?(.*)
